adding cards to index.html (#459)

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,59 +1,120 @@
 <h5 class="mb-3">{% trans 'Welcome' %} {{ user_name }}</h5>
-<ul class="list-group">
+<div class="row">
     {% if perm_search %}
-        <li class="list-group-item list-group-item-action">
-            <i class="bi bi-search"></i> <a href="search.php">{% trans 'Search zones and records' %}</a>
-        </li>
+        <div class="col-sm-3 mb-3"  >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-search display-1" ></i></div>
+                <div class="card-body">
+                <div class="row"><a href="search.php" class="btn btn-primary btn-block">{% trans 'Search zones and records' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
     {% if perm_view_zone_own or perm_view_zone_other %}
-        <li class="list-group-item list-group-item-action">
-            <i class="bi bi-list"></i> <a href="list_zones.php">{% trans 'List zones' %}</a>
-        </li>
+        <div class="col-sm-3 mb-3" >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-list display-1" ></i></div>
+                <div class="card-body">
+                <div class="row"><a href="list_zones.php" class="btn btn-primary btn-block">{% trans 'List zones' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
+    
     {% if perm_zone_master_add %}
-        <li class="list-group-item list-group-item-action">
-            <i class="bi bi-list"></i> <a href="list_zone_templ.php">{% trans 'List zone templates' %}</a>
-        </li>
+        <div class="col-sm-3 mb-3" >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-list display-1" ></i></div>
+                <div class="card-body">
+                <div class="row"><a href="list_zone_templ.php" class="btn btn-primary btn-block">{% trans 'List zone templates' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
     {% if perm_supermaster_view %}
-        <li class="list-group-item list-group-item-action">
-            <i class="bi bi-list"></i> <a href="list_supermasters.php">{% trans 'List supermasters' %}</a>
-        </li>
+        <div class="col-sm-3 mb-3"  >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-list display-1" ></i></div>
+                <div class="card-body">
+                <div class="row"><a href="list_supermasters.php" class="btn btn-primary btn-block">{% trans 'List supermasters' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
     {% if perm_zone_master_add %}
-        <li class="list-group-item list-group-item-action">
-            <i class="bi bi-plus-circle"></i> <a href="add_zone_master.php">{% trans 'Add master zone' %}</a>
-        </li>
+        <div class="col-sm-3 mb-3"  >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-plus-circle display-1" ></i></div>
+                <div class="card-body">
+                <div class="row"><a href="add_zone_master.php" class="btn btn-primary btn-block">{% trans 'Add master zone' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
     {% if perm_zone_slave_add %}
-        <li class="list-group-item list-group-item-action">
-            <i class="bi bi-plus-circle"></i> <a href="add_zone_slave.php">{% trans 'Add slave zone' %}</a>
-        </li>
+        <div class="col-sm-3 mb-3"  >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-plus-circle display-1" ></i></div>
+                <div class="card-body">
+                <div class="row"><a href="add_zone_slave.php" class="btn btn-primary btn-block">{% trans 'Add slave zone' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
     {% if perm_supermaster_add %}
-        <li class="list-group-item list-group-item-action">
-            <i class="bi bi-plus-circle"></i> <a href="add_supermaster.php">{% trans 'Add supermaster' %}</a>
-        </li>
+        <div class="col-sm-3 mb-3" >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-plus-circle display-1" ></i></div>
+                <div class="card-body">
+                <div class="row"><a href="add_supermaster.php" class="btn btn-primary btn-block">{% trans 'Add supermaster' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
     {% if perm_zone_master_add %}
-        <li class="list-group-item list-group-item-action">
-            <i class="bi bi-plus-circle"></i> <a href="bulk_registration.php">{% trans 'Bulk registration' %}</a>
-        </li>
+        <div class="col-sm-3 mb-3" >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-plus-circle display-1" ></i></div>
+                <div class="card-body">
+                <div class="row"><a href="bulk_registration.php" class="btn btn-primary btn-block">{% trans 'Bulk registration' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
     {% if perm_is_godlike and dblog_use == true %}
-    <li class="list-group-item list-group-item-action">
-        <i class="bi bi-list-ul"></i> <a href="list_logs.php">{% trans 'Show logs' %}</a>
-    </li>
+        <div class="col-sm-3 mb-3" >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-list-ul display-1" ></i></div>
+                <div class="card-body">
+                <div class="row"><a href="list_logs.php" class="btn btn-primary btn-block">{% trans 'Show logs' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
     {% if auth_used != "ldap" %}
-        <li class="list-group-item list-group-item-action">
-            <i class="bi bi-key"></i> <a href="change_password.php">{% trans 'Change password' %}</a>
-        </li>
+        <div class="col-sm-3 mb-3" >
+            <div class="card">
+                <div class="text-center"><i class="bi bi-key display-1"></i></div>
+                <div class="card-body">
+                <div class="row"><a href="change_password.php" class="btn btn-primary btn-block">{% trans 'Change password' %}</a> </div>
+                </div>
+            </div>
+        </div>
     {% endif %}
-    <li class="list-group-item list-group-item-action">
-        <i class="bi bi-people"></i> <a href="users.php">{% trans 'User administration' %}</a>
-    </li>
-    <li class="list-group-item list-group-item-action">
-        <i class="bi bi-box-arrow-right"></i> <a href="index.php?logout">{% trans 'Logout' %}</a>
-    </li>
-</ul>
+    <div class="col-sm-3 mb-3" >
+        <div class="card">
+            <div class="text-center"><i class="bi bi-people display-1" ></i></div>
+            <div class="card-body">
+            <div class="row"><a href="users.php" class="btn btn-primary btn-block">{% trans 'User administration' %}</a> </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-3 mb-3" >
+        <div class="card">
+            <div class="text-center"><i class="bi bi-box-arrow-right display-1" ></i></div>
+            <div class="card-body">
+            <div class="row"><a href="index.php?logout" class="btn btn-primary btn-block">{% trans 'Logout' %}</a> </div>
+            </div>
+        </div>
+    </div>
+</div>
