--- a/templates/index_cards.html
+++ b/templates/index_cards.html
@@ -5,7 +5,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-search display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="search.php" class="btn btn-primary btn-block">{% trans 'Search zones and
+                <div class="row"><a href="search.php" class="btn btn-light btn-block">{% trans 'Search zones and
                     records' %}</a></div>
             </div>
         </div>
@@ -14,9 +14,9 @@
     {% if perm_view_zone_own or perm_view_zone_other %}
     <div class="col-sm-3 mb-3">
         <div class="card">
-            <div class="text-center"><i class="bi bi-list-check display-1"></i></div>
+            <div class="text-center"><i class="bi bi-diagram-3 display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="list_zones.php" class="btn btn-primary btn-block">{% trans 'List zones' %}</a>
+                <div class="row"><a href="list_zones.php" class="btn btn-light btn-block">{% trans 'List zones' %}</a>
                 </div>
             </div>
         </div>
@@ -26,9 +26,9 @@
     {% if perm_zone_master_add %}
     <div class="col-sm-3 mb-3">
         <div class="card">
-            <div class="text-center"><i class="bi bi-list-columns display-1"></i></div>
+            <div class="text-center"><i class="bi bi-files display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="list_zone_templ.php" class="btn btn-primary btn-block">{% trans 'List zone
+                <div class="row"><a href="list_zone_templ.php" class="btn btn-light btn-block">{% trans 'List zone
                     templates' %}</a></div>
             </div>
         </div>
@@ -37,9 +37,9 @@
     {% if perm_supermaster_view %}
     <div class="col-sm-3 mb-3">
         <div class="card">
-            <div class="text-center"><i class="bi bi-list-columns-reverse display-1"></i></div>
+            <div class="text-center"><i class="bi bi-hdd-rack display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="list_supermasters.php" class="btn btn-primary btn-block">{% trans 'List
+                <div class="row"><a href="list_supermasters.php" class="btn btn-light btn-hdd-rack">{% trans 'List
                     supermasters' %}</a></div>
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-plus-circle display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="add_zone_master.php" class="btn btn-primary btn-block">{% trans 'Add master
+                <div class="row"><a href="add_zone_master.php" class="btn btn-light btn-block">{% trans 'Add master
                     zone' %}</a></div>
             </div>
         </div>
@@ -61,7 +61,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-plus-circle-dotted display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="add_zone_slave.php" class="btn btn-primary btn-block">{% trans 'Add slave
+                <div class="row"><a href="add_zone_slave.php" class="btn btn-light btn-block">{% trans 'Add slave
                     zone' %}</a></div>
             </div>
         </div>
@@ -70,9 +70,9 @@
     {% if perm_supermaster_add %}
     <div class="col-sm-3 mb-3">
         <div class="card">
-            <div class="text-center"><i class="bi bi-plus-square display-1"></i></div>
+            <div class="text-center"><i class="bi bi-hdd-network display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="add_supermaster.php" class="btn btn-primary btn-block">{% trans 'Add
+                <div class="row"><a href="add_supermaster.php" class="btn btn-light btn-block">{% trans 'Add
                     supermaster' %}</a></div>
             </div>
         </div>
@@ -81,9 +81,9 @@
     {% if perm_zone_master_add %}
     <div class="col-sm-3 mb-3">
         <div class="card">
-            <div class="text-center"><i class="bi bi-plus-square-dotted display-1"></i></div>
+            <div class="text-center"><i class="bi bi-collection display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="bulk_registration.php" class="btn btn-primary btn-block">{% trans 'Bulk
+                <div class="row"><a href="bulk_registration.php" class="btn btn-light btn-block">{% trans 'Bulk
                     registration' %}</a></div>
             </div>
         </div>
@@ -94,7 +94,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-list-ul display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="list_logs.php" class="btn btn-primary btn-block">{% trans 'Show logs' %}</a>
+                <div class="row"><a href="list_logs.php" class="btn btn-light btn-block">{% trans 'Show logs' %}</a>
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-key display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="change_password.php" class="btn btn-primary btn-block">{% trans 'Change
+                <div class="row"><a href="change_password.php" class="btn btn-light btn-block">{% trans 'Change
                     password' %}</a></div>
             </div>
         </div>
@@ -115,7 +115,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-people display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="users.php" class="btn btn-primary btn-block">{% trans 'User administration'
+                <div class="row"><a href="users.php" class="btn btn-light btn-block">{% trans 'User administration'
                     %}</a></div>
             </div>
         </div>
@@ -124,7 +124,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-box-arrow-right display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="index.php?logout" class="btn btn-primary btn-block">{% trans 'Logout' %}</a>
+                <div class="row"><a href="index.php?logout" class="btn btn-light btn-block">{% trans 'Logout' %}</a>
                 </div>
             </div>
         </div>
