--- a/style/spark.css
+++ b/style/spark.css
@@ -105,6 +105,10 @@ a:hover {
     background-color: #212529;
 }
 
+.card i {
+    color: #b7b7b8;
+}
+
 .card a {
     color: #b7b7b8;
     background: #2c3031;
