--- a/templates/index_cards.html
+++ b/templates/index_cards.html
@@ -94,7 +94,7 @@
         <div class="card">
             <div class="text-center"><i class="bi bi-list-ul display-1"></i></div>
             <div class="card-body">
-                <div class="row"><a href="list_logs.php" class="btn btn-light btn-block">{% trans 'Show logs' %}</a>
+                <div class="row"><a href="list_log_zones.php" class="btn btn-light btn-block">{% trans 'Zone logs' %}</a>
                 </div>
             </div>
         </div>
