--- a/templates/index_list.html
+++ b/templates/index_list.html
@@ -42,7 +42,7 @@
     {% endif %}
     {% if perm_is_godlike and dblog_use == true %}
     <li class="list-group-item list-group-item-action">
-        <i class="bi bi-list-ul"></i> <a href="list_logs.php">{% trans 'Show logs' %}</a>
+        <i class="bi bi-list-ul"></i> <a href="list_log_zones.php">{% trans 'Zone logs' %}</a>
     </li>
     {% endif %}
     {% if auth_used != "ldap" %}
