Add validation to the zone search query.

--- a/templates/search.html
+++ b/templates/search.html
@@ -9,10 +9,10 @@
             <div class="input-group has-validation">
                 <input type="text" class="form-control form-control-sm" name="query" value="{{ query }}" required>
                 <input type="submit" class="btn btn-primary btn-sm" name="do_search" value="{% trans 'Search' %}">
-                <div class="invalid-tooltip">{% trans 'Provide a keyword for your search' %}</div>
+                <div class="invalid-feedback">{% trans 'Provide a keyword for your search' %}</div>
             </div>
         </div>
-        <div class="col-sm-8 d-flex align-items-center">
+        <div class="col-sm-8 mt-1">
             <div class="form-check form-check-inline">
                 <input type="checkbox" class="form-check-input" name="zones" id="inlineCheckbox1"
                        value="true" {{ search_by_zones }}>
