--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -1,18 +1,23 @@
 <h5 class="mb-3">{% trans 'Add zone template for' %} {{ username }}</h5>
-<form method="post" action="add_zone_templ.php">
+<form class="needs-validation" method="post" action="add_zone_templ.php" novalidate>
     <table>
         <tr>
             <td width="150">{% trans 'Name' %}</td>
-            <td><input class="form-control form-control-sm" type="text" name="templ_name" value=""></td>
+            <td>
+                <input class="form-control form-control-sm" type="text" name="templ_name" value="" required>
+                <div class="invalid-feedback">{% trans 'Provide a name for your template' %}</div>
+            </td>
+
         </tr>
         <tr>
             <td>{% trans 'Description' %}</td>
-            <td><input class="form-control form-control-sm" type="text" name="templ_descr" value=""></td>
+            <td>
+                <input class="form-control form-control-sm" type="text" name="templ_descr" value="">
+            </td>
         </tr>
         <tr>
             <td></td>
             <td><input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans 'Add zone template' %}"></td>
         </tr>
     </table>
-
 </form>
