Fix to show user name if full name is not available.

--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -1,4 +1,4 @@
-<h5 class="mb-3">{% trans 'Add zone template for' %} {{ username }}</h5>
+<h5 class="mb-3">{% trans 'Add zone template for' %} {{ user_name }}</h5>
 <form class="needs-validation" method="post" action="add_zone_templ.php" novalidate>
     <table>
         <tr>
