--- a/templates/list_zone_templ.html
+++ b/templates/list_zone_templ.html
@@ -1,4 +1,4 @@
-<h5 class="mb-3">{% trans 'Zone templates for' %} {{ username }}</h5>
+<h5 class="mb-3">{% trans 'Zone templates for' %} {{ user_name }}</h5>
 <table class="table table-striped table-hover table-sm">
     <thead>
     <tr>
