--- a/templates/add_supermaster.html
+++ b/templates/add_supermaster.html
@@ -1,40 +1,31 @@
 <h5 class="mb-3">{% trans 'Add supermaster' %}</h5>
 <form class="needs-validation" method="post" action="add_supermaster.php" novalidate>
-    <table>
-        <tr>
-            <td>{% trans 'IP address of supermaster' %}</td>
-            <td>
-                <input class="form-control form-control-sm" type="text" name="master_ip" value="{{ master_ip }}"
-                       required>
-                <div class="invalid-feedback">{% trans 'Provide ip address' %}</div>
-            </td>
-        </tr>
-        <tr>
-            <td>{% trans 'Hostname in NS record' %}</td>
-            <td>
-                <input class="form-control form-control-sm" type="text" name="ns_name" value="{{ ns_name }}" required>
-                <div class="invalid-feedback">{% trans 'Provide host name' %}</div>
-            </td>
-        </tr>
-        <tr>
-            <td>{% trans 'Account' %}</td>
-            <td>
-                <select class="form-select form-select-sm" name="account">
-                    {% for user in users %}
-                    {% if user['id'] == session_uid %}
-                    <option value="{{ user['username'] }}" selected>{{ user['fullname'] }}</option>
-                    {% elseif perm_view_others %}}
-                    <option value="{{ user['username'] }}">{{ user['fullname'] }}</option>
-                    {% endif %}
-                    {% endfor %}
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td>&nbsp;</td>
-            <td>
-                <input class="btn btn-primary btn-sm" type="submit" name="submit" value="{% trans 'Add supermaster' %}">
-            </td>
-        </tr>
-    </table>
+    <div class="col-sm-3">
+        <div class="mb-2">
+            <label for="master_ip" class="form-label">{% trans 'IP address of supermaster' %}</label>
+            <input class="form-control form-control-sm" type="text" id="master_ip" name="master_ip" value="{{ master_ip }}"
+                   required>
+            <div class="invalid-feedback">{% trans 'Provide ip address' %}</div>
+        </div>
+        <div class="mb-2">
+            <label for="ns_name" class="form-label">{% trans 'Hostname in NS record' %}</label>
+            <input class="form-control form-control-sm" type="text" id="ns_name" name="ns_name" value="{{ ns_name }}" required>
+            <div class="invalid-feedback">{% trans 'Provide host name' %}</div>
+        </div>
+        <div class="mb-4">
+            <label for="account" class="form-label">{% trans 'Account' %}</label>
+            <select class="form-select form-select-sm" id="account" name="account">
+                {% for user in users %}
+                {% if user['id'] == session_uid %}
+                <option value="{{ user['username'] }}" selected>{{ user['fullname'] }}</option>
+                {% elseif perm_view_others %}}
+                <option value="{{ user['username'] }}">{{ user['fullname'] }}</option>
+                {% endif %}
+                {% endfor %}
+            </select>
+        </div>
+        <div class="mb-2">
+            <input class="btn btn-primary btn-sm" type="submit" name="submit" value="{% trans 'Add supermaster' %}">
+        </div>
+    </div>
 </form>
