--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -1,23 +1,17 @@
 <h5 class="mb-3">{% trans 'Add zone template for' %} {{ user_name }}</h5>
 <form class="needs-validation" method="post" action="add_zone_templ.php" novalidate>
-    <table>
-        <tr>
-            <td width="150">{% trans 'Name' %}</td>
-            <td>
-                <input class="form-control form-control-sm" type="text" name="templ_name" value="" required>
-                <div class="invalid-feedback">{% trans 'Provide a name for your template' %}</div>
-            </td>
-
-        </tr>
-        <tr>
-            <td>{% trans 'Description' %}</td>
-            <td>
-                <input class="form-control form-control-sm" type="text" name="templ_descr" value="">
-            </td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans 'Add zone template' %}"></td>
-        </tr>
-    </table>
+    <div class="col-sm-3">
+        <div class="mb-2">
+            <label for="templ_name" class="form-label">{% trans 'Name' %}</label>
+            <input class="form-control form-control-sm" type="text" id="templ_name" name="templ_name" value="" required>
+            <div class="invalid-feedback">{% trans 'Provide a name for your template' %}</div>
+        </div>
+        <div class="mb-2">
+            <label for="templ_descr" class="form-label">{% trans 'Description' %}</label>
+            <input class="form-control form-control-sm" type="text" id="templ_descr" name="templ_descr" value="">
+        </div>
+        <div div class="mb-2">
+            <input type="submit" class="btn btn-primary btn-sm" name="commit" value="{% trans 'Add zone template' %}">
+        </div>
+    </div>
 </form>
