Fix to not mark valid fields with green border.

--- a/style/ignite.css
+++ b/style/ignite.css
@@ -32,3 +32,8 @@ footer a, footer a:hover {
 .card i {
     color: rgb(108, 117, 125);
 }
+
+.form-control.is-valid, .was-validated .form-control:valid {
+    border-color:inherit !important;
+    background-image: inherit !important;
+}
