Fix to hide marking of valid checkboxes.

--- a/style/ignite.css
+++ b/style/ignite.css
@@ -37,3 +37,8 @@ footer a, footer a:hover {
     border-color:inherit !important;
     background-image: inherit !important;
 }
+
+.form-check-input.is-valid, .was-validated .form-check-input:valid {
+    background-image: inherit !important;
+    border-color: rgba(0, 0, 0, 0.25);
+}
