--- a/style/spark.css
+++ b/style/spark.css
@@ -124,3 +124,8 @@ a:hover {
     border-color:inherit !important;
     background-image: inherit !important;
 }
+
+.form-check-input.is-valid, .was-validated .form-check-input:valid {
+    background-image: inherit !important;
+    border-color: rgba(0, 0, 0, 0.25);
+}
